--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@vercel/og": "^0.6.2",
     "@vercel/speed-insights": "^1.0.10",
     "ai": "^3.0.12",
-    "firebase": "^10.14.1",
+    "firebase": "^10.8.0",
+    "@firebase/auth": "^1.6.0",
     "formidable": "^3.5.1",
     "framer-motion": "^11.0.15",
     "googleapis": "^134.0.0",
