--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "googleapis": "^134.0.0",
     "katex": "^0.16.10",
     "nanoid": "^5.0.6",
-    "next": "14.1.3",
+    "next": "14.2.9",
     "openai": "^4.29.1",
     "react": "^18",
     "react-dom": "^18",
@@ -64,5 +64,13 @@
     "postcss-nesting": "^12.1.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "undici": "5.28.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "undici": "5.28.4"
+    }
   }
 }
